--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body bgcolor="#bde0fe" text="#1b1b74">
 <center><table width="1300"><tr><td>
 
-<img src="PAGWEB/logo.jpg"alt="logo empresarial">
+<img src="PAGWEB/Logo.jpg"alt="logo empresarial">
 
 <a href="index.html">
 <img src="PAGWEB/Inicio.png"border="0" alt="boton de inicio"></a>
@@ -23,9 +23,9 @@
 <a href="contacto.html">
 <img src="PAGWEB/Contacto.png" border="0"alt="boton de contacto"></a>
 <a href="productos.html">
-<img src="PAGWEB/productos.png" border="0"alt="boton de productos"></a>
+<img src="PAGWEB/producto.png" border="0"alt="boton de productos"></a>
 
-<center><img src="CAMION.png"></center><br>
+<center><img src="PAGWEB/CAMION.png"></center><br>
 <center><table border="0" width="90%" bgcolor="#f7f7e3">
 <tr>
 <td colspan="2"><center><h1> QUIENES SOMOS</h1></center></td>
@@ -54,7 +54,7 @@ asesores de ventas.</p>
 <a href="nosotros.html">NOSOTROS</a>-
 <a href="servicios.html">SERVICIO</a>-
 <a href="contacto.html">CONTACTO</a>-
-<a href="productos.html">PRODUCTO</a>-<br>Copyright 2020 mandanos un mensaje via email a
+<a href="producto.html">PRODUCTO</a>-<br>Copyright 2020 mandanos un mensaje via email a
 <a href="mailto: ivera@basculassc.com">ivera@basculassc.com</a>
 </center>
 </td></tr></table></center>
